@@ -108,7 +108,12 @@ PdfError PdfParserObject::ParseFile( bool bIsTrailer )
     m_bIsTrailer = bIsTrailer;
 
     if( !m_bLoadOnDemand )
+    {
         SAFE_OP( ParseFileComplete( m_bIsTrailer ) );
+
+        m_bLoadOnDemandDone       = true;
+        m_bLoadStreamOnDemandDone = true;
+    }
 
     return eCode;
 }
@@ -626,13 +631,15 @@ PdfError PdfParserObject::LoadOnDemand()
 {
     PdfError eCode;
 
+    //printf("Trying to load on demand: %i %i\n", m_bLoadOnDemand, !m_bLoadOnDemandDone );
     if( m_bLoadOnDemand && !m_bLoadOnDemandDone )
     {
         m_bLoadOnDemandDone = true;
 
+        printf("-> Delayed Parsing Object %s\n", m_reference.ToString().c_str() );
         SAFE_OP( ParseFileComplete( m_bIsTrailer ) );
     }
-
+    //printf("Loding done!\n");
     return eCode;
 }
 
@@ -651,6 +658,7 @@ PdfError PdfParserObject::LoadStreamOnDemand()
 
         if( this->HasStreamToParse() && !this->HasStream() )
         {
+            printf("-> Delayed Parsing Stream: %s\n", m_reference.ToString().c_str() );
             SAFE_OP_ADV( this->ParseStream(), "Unable to parse the objects stream." );
         }
     }
