@@ -11,6 +11,8 @@ Version 0.2
 	Added on demand loading of objects to the PdfParser;
 	Ported to windows by Leonard Rosenthol;
 	On demand loading of objects is now the default;
+	Refactored PdfFilter interface so that filters are cached;
+	Fixed multiple connected XRef tables through /Prev keys in the trailer;
 
 Version 0.1 (11 June 2006)
 	Initial release;
